--- a/roogle/src/components/post.css
+++ b/roogle/src/components/post.css
@@ -27,6 +27,9 @@
 }
 
 .post-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     width: 30%;
     height: 45%;
     padding: 1.5%;
@@ -36,6 +39,7 @@
 
 #content-title {
     font-family: "Montserrat", sans-serif;
+    text-decoration: underline;
     font-size: 2em;
 }
 
@@ -50,4 +54,20 @@
     font-family: "Hind Madurai", sans-serif;
     font-size: 1em;
     font-weight: 400;
+}
+
+#delete-button {
+    background-color: var(--secondary);
+    color: black;
+    border: none;
+    border-radius: 5px;
+    font-weight: 700;
+    padding: 1% 5%;
+    font-size: 1.2em;
+    margin: 5%;
+    cursor: pointer;
+}
+
+#delete-button:hover {
+    background-color: #ff522b;
 }
